--- a/my-app/src/app/(pages)/lead/glimpse/page.css
+++ b/my-app/src/app/(pages)/lead/glimpse/page.css
@@ -1,12 +1,8 @@
-.GlimpseComponent {
-    width: 100%;
+*{
+    padding:0% ;
+    margin: 0%;
+    box-sizing: border-box;
 }
-
-.GlimpseComponent-in {
-    width: 100%;
-    padding: 1rem;
-}
-
 
 .GlimpseComponent {
     width: 100%;
@@ -18,16 +14,20 @@
 
 .Glimpse-one {
     width: 100%;  
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* .Glimpse-one-in {
+.Glimpse-one-in {
     width: 100%;
     display: flex;
-} */
+}
 
-/* .Glimpse-icon {
+.Glimpse-icon {
     font-size: 1.5rem;
-} */
+}
 
 .Glimpse-one-one {
     width: 100%;
@@ -35,15 +35,12 @@
 }
 
 .Glimpse-one-one p {
-    font-size: 1.2rem;
-    border: 1px solid black;    
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: .5rem;
-    padding: .5rem 1rem;
-    border: 1px solid black;
-    border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;    
 }
 
 .Glimpse-one-two {
@@ -55,10 +52,12 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    gap: .5rem;
 }
 
 .Glimpse-one-two-one p {
     font-size: 1rem;
+    padding: .2rem 0rem;
 }
 
 .Glimpse-one a{
@@ -93,18 +92,23 @@
 }
 
 .Glimpse-three-in-des{
-    width: 48%;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-#button{
-    width: 12%;
-    /* padding-right: .5rem; */
+.Glimpse-three-in-action{
+    width: 15%;
+    display: flex;
+    justify-content: flex-end;
+    /* background-color: yellowgreen; */
 }
 
-#button button{
-    width: 73%;
+.Glimpse-three-in-des button{
+    width: 100%;
     padding: .5rem;
-    font-size: 15px;
+    /* font-size: 15px; */
     background-color: black;
     color: white;
     border-radius: .5rem;
@@ -112,7 +116,7 @@
     border: none;
 }
 
-#button button:hover{
+.Glimpse-three-in-des button:hover{
     background-color: green;
 }
 
