--- a/my-app/src/app/(pages)/lead/glimpse/page.css
+++ b/my-app/src/app/(pages)/lead/glimpse/page.css
@@ -65,50 +65,67 @@
     color: rgb(217, 3, 3);
 }
 
-
+.Glimpse-three {
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
 .Glimpse-three-in{
     display: flex;        
-    width: 90%;             
+    width: 60%;             
     align-items: center;  
+    margin: auto;                      
     justify-content:flex-start;
-    gap: 1rem;         
     background-color: #f9f9f9;    
     border: 1px solid #ddd;            
+    gap: 1rem;         
     border-radius: 8px;    
-    margin: 20px;                      
     overflow: hidden;
 }
   
   
-.Glimpse-three-in-img{
+.Glimpse-three-in-one {
     width: 40%;  
     height: 20rem;
 }
   
-.Glimpse-three-in-img img{
+.Glimpse-three-in-one img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
-.Glimpse-three-in-des{
+.Glimpse-three-in-two {
     width: 60%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-direction: column;
+    gap: 1rem;
 }
 
-.Glimpse-three-in-action{
-    width: 15%;
-    display: flex;
-    justify-content: flex-end;
-    /* background-color: yellowgreen; */
-}
-
-.Glimpse-three-in-des button{
+.Glimpse-three-in-two-one {
     width: 100%;
-    padding: .5rem;
-    /* font-size: 15px; */
+}
+
+.Glimpse-three-in-two-one p {
+    font-size: 1rem;
+    text-align: start;
+}
+
+.Glimpse-three-in-two-two {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0rem 1rem;
+}
+
+.Glimpse-three-in-two-two button{
+    padding: .5rem 1rem;
     background-color: black;
     color: white;
     border-radius: .5rem;
@@ -116,7 +133,7 @@
     border: none;
 }
 
-.Glimpse-three-in-des button:hover{
+.Glimpse-three-in-two-two button:hover{
     background-color: green;
 }
 
