--- a/my-app/src/app/(pages)/lead/socials/page.css
+++ b/my-app/src/app/(pages)/lead/socials/page.css
@@ -1,12 +1,8 @@
-.SocialsComponent {
-    width: 100%;
+*{
+    padding:0% ;
+    margin: 0%;
+    box-sizing: border-box;
 }
-
-.SocialsComponent-in {
-    width: 100%;
-    padding: 1rem;
-}
-
 
 .SocialsComponent {
     width: 100%;
@@ -18,6 +14,10 @@
 
 .Socials-one {
     width: 100%;  
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .Socials-one-in {
@@ -35,15 +35,12 @@
 }
 
 .Socials-one-one p {
-    font-size: 1.2rem;
-    border: 1px solid black;    
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: .5rem;
-    padding: .5rem 1rem;
-    border: 1px solid black;
-    border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;    
 }
 
 .Socials-one-two {
@@ -55,13 +52,74 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    gap: .5rem;
 }
 
 .Socials-one-two-one p {
     font-size: 1rem;
+    padding: .2rem 0rem;
 }
 
 .Socials-one a{
     text-decoration: none;
     color: rgb(217, 3, 3);
+}
+
+.Socials-three{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 2.5rem 0rem;
+}
+
+.Socials-three-in{
+    width: 100%;
+    padding: 1rem;   
+}
+
+#final{
+    width: 100%;
+    border: 2px solid rgb(175, 175, 175);
+    border-radius: 20px;
+    padding: 1rem;
+}
+
+.Socials-three-in-one-box{
+    width: 100%;
+    padding: .3rem;
+}
+
+.icon{
+    color: black;
+    font-size: 3rem;
+}
+
+.name{
+    width: 100%;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.link{
+    width: 100%;
+    /* padding: 1rem 0rem; */
+}
+
+.button{
+    width: 100%;
+    /* padding: 1rem 0rem; */
+}
+
+.button button{
+    cursor: pointer;
+      padding: .5rem 1rem;
+      background-color: black;
+      border: none;
+      color: white;
+      font-size: .8rem;
+      border-radius: 8px;
+}
+
+.button button:hover{
+    background-color: rgb(0, 147, 0);
 }
