--- a/my-app/src/app/(pages)/lead/addProjects/page.css
+++ b/my-app/src/app/(pages)/lead/addProjects/page.css
@@ -6,6 +6,7 @@
 
 .addProjectsComponent{
     width: 100%;
+    padding: 1rem;
 }
 
 .addProjectsComponent-in{
@@ -16,38 +17,23 @@
     flex-direction: column;
 }
 
-.addProjects-one{
-    width: 100%;
-    padding: .5rem;
-    background-color: black;
-    color: white;
-}
-
 .addProjects-two{
     width: 100%;
     padding: 1rem;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    padding-top: 2rem;
     gap: 1rem;
 }
 
 .addProjects-two-a{
-    width: 25%;
-}
-
-#input input{
-    width: 100%;
-    padding: 1rem;
-}
-
-.addProjects-two-b{
-    /* width: 5%; */
+    width: 45%;
 }
 
 .addProjects-two-b button{
     width: 100%;
-    padding: .5rem;
+    padding: .5rem 1rem;
     background-color: black;
     color: white;
     border: none;
@@ -56,5 +42,80 @@
 
 .addProjects-two-b button:hover{
     background-color: rgb(0, 147, 0);
+    cursor: pointer;
+}
+
+.addProjects-one {
+    width: 100%;  
+    padding: 20px;
+    background: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.addProjects-one-in {
+    width: 100%;
+    display: flex;
+}
+
+.addProjects-icon {
+    font-size: 1.5rem;
+}
+
+.addProjects-one-one {
+    width: 100%;
+    display: flex;
+}
+
+.addProjects-one-one p {
+  font-size: 1.2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;    
+}
+
+.addProjects-one-two {
+    padding: .8rem .5rem;
+}
+
+.addProjects-one-two-one {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: .5rem;
+}
+
+.addProjects-one-two-one p {
+    font-size: 1rem;
+    padding: .2rem 0rem;
+}
+
+.addProjects-one a{
+    text-decoration: none;
+    color: rgb(217, 3, 3);
+}
+
+
+
+#FileUploader{
+    width: 100%;
+}
+
+
+#FileUploader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+    margin: 10px auto;
+    border: 2px dashed #007bff; /* Change color as needed */
+    border-radius: 8px;
+    background-color: #f8f9fa;
+    transition: background-color 0.3s ease;
     cursor: pointer;
 }
