--- a/my-app/src/app/(pages)/lead/glimpse/page.css
+++ b/my-app/src/app/(pages)/lead/glimpse/page.css
@@ -137,22 +137,37 @@
     background-color: green;
 }
 
-.Glimpse-two{
+.Glimpse-two {
     width: 100%;
 }
 
-.Glimpse-two-in{
+.Glimpse-two-in {
+    width: 100%;
+}
+
+.Glimpse-two-in-one {
     width: 100%;
     display: flex;
     gap: 1rem;
     padding: 1rem 0rem;
 }
 
-.GlimpseUpdate-one, .GlimpseUpdate-two{
-    width: 40%;
+.GlimpseUpdate-one {
+    width: 50%;
 }
 
-.GlimpseUpdate-one input, .GlimpseUpdate-two input{
+.GlimpseUpdate-two {
+    width: 50%;
+}
+
+.GlimpseUpdate-one input {
+    width: 100%;
+    padding: 0.8rem;
+    border: 1px solid rgb(202, 196, 196);
+    border-radius: 5px;
+}
+
+.GlimpseUpdate-two input {
     width: 100%;
     padding: 0.8rem;
     border: 1px solid rgb(202, 196, 196);
@@ -160,12 +175,11 @@
 }
 
 .GlimpseUpdate-three {
-    width: 20%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     gap: 1rem;
-    padding-top: 1.5rem;
 }
 
 .GlimpseUpdate-three button{
@@ -176,8 +190,8 @@
     color: white;
     background-color: black;
     cursor: pointer;
-}
-
-.GlimpseUpdate-three button:hover{
-    background-color: green;
-}
+  }
+  
+  .GlimpseUpdate-three button:hover{
+    background-color: rgb(0, 147, 0);
+  }
