--- a/my-app/src/app/(pages)/lead/socials/page.css
+++ b/my-app/src/app/(pages)/lead/socials/page.css
@@ -123,3 +123,78 @@
 .button button:hover{
     background-color: rgb(0, 147, 0);
 }
+
+.Socials-two {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #f9f9f9;    
+  }
+  
+  .Socials-two-in {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    max-width: 400px;
+  }
+  
+  .SocialsUpdate-one {
+    display: flex;
+    justify-content: center;
+    font-size: 4rem;
+    color: black; 
+  }
+  
+  .SocialsUpdate-two p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
+  }
+  
+  .SocialsUpdate-three {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .SocialsUpdate-three label {
+    font-size: 0.9rem;
+    margin-bottom: 5px;
+    color: black;
+  }
+  
+  .SocialsUpdate-three input {
+    padding: 8px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #555;
+  }
+  
+  .SocialsUpdate-four {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1rem;
+    gap: 10px;
+  }
+  
+  .SocialsUpdate-four button {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    color: white;
+  }
+  
+  .SocialsUpdate-four button:hover {
+    background-color: rgb(0, 147, 0); /* Update button color */
+  }
+  
+  .SocialsUpdate-four button {
+    background-color: black;
+  }
+  
