--- a/my-app/src/app/(pages)/auth/login/page.css
+++ b/my-app/src/app/(pages)/auth/login/page.css
@@ -77,3 +77,49 @@
   cursor: pointer;
   font-size: 1rem;
 }
+
+
+@media all and (max-width: 500px) {
+
+  .LoginComponent-in {
+    padding: 1rem;
+    height: 80vh;
+  }
+
+  .Login-one {
+    width: 90%;
+    padding: 1rem 0;
+  }
+
+  .Login-one h1 {
+    font-size: 1.5rem; /* Slightly reduce the font size for headings */
+  }
+
+  /* Input and Button Wrapper */
+  .Login-two {
+    width: 90%;
+  }
+
+  .Login-two-in {
+    gap: 0.8rem;
+  }
+
+  /* Username and Password Input Fields */
+  .Login-in-one,
+  .Login-in-two,
+  .Login-in-three {
+    width: 100%;
+  }
+
+  .Login-in-one input,
+  .Login-in-two input {
+    padding: 0.6rem;
+    font-size: 0.9rem; /* Slightly smaller font for inputs */
+  }
+
+  /* Login Button Styling */
+  .Login-in-three button {
+    padding: 0.7rem;
+    font-size: 1rem;
+  }
+}
