--- a/my-app/src/app/Clubpage/page.css
+++ b/my-app/src/app/Clubpage/page.css
@@ -217,11 +217,12 @@
 
 .Club-four-one-in-one-img {
   width: 50%;
+  height: 100%;
 }
 
 .Club-four-one-in-one-img img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
 }
 
