--- a/my-app/src/app/(pages)/lead/clubDetails/page.css
+++ b/my-app/src/app/(pages)/lead/clubDetails/page.css
@@ -1,3 +1,4 @@
+
 *{
     padding:0% ;
     margin: 0%;
@@ -25,7 +26,7 @@
     display: flex;
 }
 
-.clubDetails-icon {
+.clubDetailss-icon {
     font-size: 1.5rem;
 }
 
@@ -80,7 +81,6 @@
 .clubDetails-three-in-two-in {
     width: 100%;
     display: flex;
-    align-items: center;
     justify-content: flex-start;
     gap: 1rem;
     padding: 1rem;
@@ -119,6 +119,7 @@
   background-color: rgb(0, 147, 0);
 }
 
+
 .clubDetails-two {
     width: 100%;
 }
@@ -130,33 +131,34 @@
 .clubDetails-two-in-one {
     width: 100%;
     display: flex;
+    flex-direction: column;
     gap: 1rem;
     padding: 1rem 0rem;
 }
 
-.imageUpdate-one {
+.clubDetailsUpdate-one {
     width: 50%;
 }
 
-.imageUpdate-two {
+.clubDetailsUpdate-two {
     width: 50%;
 }
 
-.imageUpdate-one input {
+.clubDetailsUpdate-one input {
     width: 100%;
     padding: 0.8rem;
     border: 1px solid rgb(202, 196, 196);
     border-radius: 5px;
 }
 
-.imageUpdate-two input {
+.clubDetailsUpdate-two input {
     width: 100%;
     padding: 0.8rem;
     border: 1px solid rgb(202, 196, 196);
     border-radius: 5px;
 }
 
-.imageUpdate-three {
+.clubDetailsUpdate-three {
     width: 100%;
     display: flex;
     align-items: center;
@@ -164,7 +166,7 @@
     gap: 1rem;
 }
 
-.imageUpdate-three button{
+.clubDetailsUpdate-three button{
     font-size: .8rem;
     border-radius: 5px;
     border: none;
@@ -174,6 +176,6 @@
     cursor: pointer;
   }
   
-  .imageUpdate-three button:hover{
+  .clubDetailsUpdate-three button:hover{
     background-color: rgb(0, 147, 0);
   }
